kube/banker-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: banker
  labels:
    name: banker
