kube/banker-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: banker
  name: banker-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: banker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banker-service
                port:
                  number: 80
